[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sfx/Keeper_Punch_01.wav" type="AudioStream" id=1]
[ext_resource path="res://src/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/fonts/char_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/enemies/enemy_anim/Zombie.tres" type="SpriteFrames" id=4]
[ext_resource path="res://assets/kenney/kenney_splatpack/PNG/Default (256px)/splat03.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.141176, 1, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.07107

[sub_resource type="SphereMesh" id=19]

[sub_resource type="Gradient" id=15]
colors = PoolColorArray( 0, 0, 0, 0.196078, 0, 0, 0, 0.196078 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 15 )

[sub_resource type="Shader" id=22]
code = "shader_type canvas_item;
uniform vec4 u_replacement_color : hint_color;

uniform vec4 u_color_key : hint_color;
uniform float u_tolerance;
uniform bool active;

void fragment() {
	if(active){
	    // Get color from the sprite texture at the current pixel we are rendering
	    vec4 original_color = texture(TEXTURE, UV);
	    vec3 col = original_color.rgb;
	    vec3 diff3 = col - u_color_key.rgb;
	    float m = max(max(abs(diff3.r), abs(diff3.g)), abs(diff3.b));
	    float brightness = length(col);
	    col = mix(col, u_replacement_color.rgb * brightness, step(m, u_tolerance));
	    COLOR = vec4(col.rgb, original_color.a);
	}else{
		vec4 original_color = texture(TEXTURE, UV);
		COLOR = original_color
	}
}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 22 )
shader_param/u_replacement_color = Color( 0.686275, 0.196078, 0.196078, 1 )
shader_param/u_color_key = Color( 0.152941, 0.784314, 0.6, 1 )
shader_param/u_tolerance = 0.32
shader_param/active = true

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 10 )

[node name="Enemy" type="KinematicBody2D"]
use_parent_material = true
position = Vector2( 0, -5 )
script = ExtResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -15.0
margin_top = -50.0
margin_right = 45.0
margin_bottom = -36.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Shadow" type="MeshInstance2D" parent="."]
position = Vector2( -5.68434e-14, -2.38419e-07 )
scale = Vector2( 15.017, 4.5 )
mesh = SubResource( 19 )
texture = SubResource( 20 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 23 )
position = Vector2( 0, -33 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 4 )
animation = "Attack"
playing = true

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -20.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 3 )
text = "Hit!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="Splat" type="Sprite" parent="."]
visible = false
modulate = Color( 0.129412, 0.596078, 0.0666667, 1 )
scale = Vector2( 0.1, 0.05 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = -4.0
margin_top = -49.0
margin_right = 36.0
margin_bottom = -35.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1

[node name="SoundAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TimerDisposeOffScreen" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerDisposeOffScreen" to="." method="_on_TimerDisposeOffScreen_timeout"]
